# AI

./: .env_template  .gitignore  1.install_packages.sh  2.create_virtual_environment.sh  3.activate_virtual_environment.sh  4.Start_Ollama.sh  5.Start_OpenWebUI.sh  6.Start_AnyLLM.sh  LICENSE  README.md  requirements.txt
Basic_Tutorials/: 1. Free LLMs.ipynb  2. Embeddings using OpenAI.ipynb  3. Embeddings using OLama.ipynb  4.b. Chunking Strategies.ipynb  4c. Advanced Retrievers.ipynb  6. Rag v1 Example..py
Basic_Tutorials/Modules/: test_ChromaRepository.py  test_Rag.py
Basic_Tutorials/Output/: Rdi.html
Databases/: chroma.sqlite3
Modules/: main.py
Modules/ChromaRepository/: pyproject.toml  requirements.txt  test_installed_package.py
Modules/ChromaRepository/temp_chroma_db/: chroma.sqlite3
Modules/ChromaRepository/tests/database/: chroma.sqlite3
Modules/ChromaRepository/tests/database_test/: chroma.sqlite3
Tutorials_Basic/: 1. Free LLMs.ipynb  2. Embeddings using OpenAI.ipynb  4. Create a simple Free RAG.ipynb  4.a. Other Document Loaders.ipynb  5. Advanced Free Rag.ipynb  6. Rag v1 Example.py  readme.md
Tutorials_Basic/Databases/: chroma.sqlite3
Tutorials_Basic/Free_LLM's/: 1. Free LLMs.ipynb
Tutorials_Basic/Modules/: test_ChromaRepository.py  test_Rag.py
Tutorials_Basic/Output/: youtube.txt
Tutorials_Basic/Resources/: The Code Whisperer.docx
Tutorials_Basic/Theory/: 0. Document Loaders.ipynb  1. Embeddings.ipynb  2. Chunking Strategies.ipynb  (+3 more)
Tutorials_Medium/: 1.FastAPI.ipynb  docker-compose.yaml  rag_server.py
anythingllm/: anythingllm.db
(+53 files in other folders)
