[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chromarepository"
version = "1.0.3"
authors = [
    {name = "DarthLinuxer", email = "chaves.camilo@gmail.com"},
]
description = "ChromaRepository is a wrapper around Chroma Vector Repository"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/darthlinuxer/AI"

[tool.flit.module]
name = "chroma_repository"
